--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <h1>Request Account Deletion</h1>
-    <p>If you wish to delete your account and all associated data from the <strong>Gold Mining (Cloud Mining)</strong> app, please fill out the form below. We will process your request within 30 days.</p>
+    <p>If you wish to delete your account and all associated data from the <strong>Silver Mining (Cloud Mining)</strong> app, please fill out the form below. We will process your request within 30 days.</p>
     
     <form action="https://formspree.io/f/xpwanwqq" method="POST">
         <label for="name">Full Name:</label>
@@ -60,7 +60,7 @@
     <p>If you prefer, you can also email us directly at <a href="mailto:cloudminerstudio@gmail.com">cloudminerstudio@gmail.com</a> to request account deletion.</p>
     
     <footer>
-        <p>&copy; 2026 Gold Mining (Cloud Mining). All rights reserved. Developed by CloudMinerStudio.</p>
+        <p>&copy; 2026 Silver Mining (Cloud Mining). All rights reserved. Developed by CloudMinerStudio.</p>
     </footer>
 </body>
 </html>
